--- a/a1b/Makefile
+++ b/a1b/Makefile
@@ -21,7 +21,7 @@ all: a1fs mkfs.a1fs
 a1fs: a1fs.o fs_ctx.o map.o options.o
 	$(CC) $^ -o $@ $(LDFLAGS)
 
-mkfs.a1fs: map.o mkfs.o
+mkfs.a1fs: map.o mkfs.o util.o
 	$(CC) $^ -o $@ $(LDFLAGS)
 
 SRC_FILES = $(wildcard *.c)
